# MelonLoader

./: .editorconfig  .gitignore  .gitlab-ci.yml  .gitmodules  CHANGELOG  CHANGELOG.MD  CHANGELOG.md  Cargo.toml  Directory.Build.props  LICENSE.md  LICENSE_AtiRoNya  MelonLoader.sln  NOTICE.txt  NuGet.config  README  README.MD  README.md  RELEASE-NOTES.md  build.py  rust-toolchain.toml
Bootstrap/: Bootstrap.cpp  Bootstrap.rc  Bootstrap.vcxproj  Bootstrap.vcxproj.filters  CMakeLists.txt  Cargo.toml  Core.cpp  Core.h  PatchAssembler.cpp  PatchAssembler.h  Patcher.cpp  Patcher.h  pch.h  preprocess.h
Bootstrap/Base/: Bootstrap.rc  Core.cpp  Core.h  DllMain.cpp  main.cpp  resource.h
Bootstrap/Base/Liberation/: Liberation.h  SOURCE
Bootstrap/Base/MSDetours/: detours.h  detours_x86.h  detours_x86.lib  detver.h
Bootstrap/Base/funchook/include/: funchook.h
Bootstrap/Managers/: AndroidData.cpp  AndroidData.h  AssemblyVerifier.cpp  AssemblyVerifier.h  AssetManagerHelper.cpp  AssetManagerHelper.h  BHapticsBridge.cpp  BHapticsBridge.h  BaseAssembly.cpp  BaseAssembly.h  DotnetRuntime.cpp  DotnetRuntime.h  Exports.cpp  Game.cpp  Game.h  Hook.cpp  Hook.h  Il2Cpp.cpp  Il2Cpp.h  InternalCalls.cpp  InternalCalls.h  Mono.cpp  Mono.h  PatchManager.cpp  PatchManager.h  StaticSettings.cpp  StaticSettings.h  bHapticsPlayer.cpp  bHapticsPlayer.h
Bootstrap/Managers/il2cpp/: Il2CppApi.h  UnityHeaders.h
Bootstrap/Patcher/: Instance.cpp  Instance.h  MemoryHelper.cpp  PatchData.cpp  PatchData.h
Bootstrap/Patcher/Tests/: Instance.spec.cpp  Instance.spec.h  Suite.spec.cpp  Suite.spec.h
Bootstrap/Utils/: AnalyticsBlocker.cpp  AnalyticsBlocker.h  AssemblyGenerator.cpp  AssemblyGenerator.h  Assertion.cpp  Assertion.h  CommandLine.cpp  CommandLine.h  Console.cpp  Console.h  Debug.cpp  Debug.h  Encoding.cpp  Encoding.h  HashCode.cpp  HashCode.h  Il2CppAssemblyGenerator.cpp  Il2CppAssemblyGenerator.h  IniFile.cpp  IniFile.h  Logger.cpp  Logger.h  PatchHelper.cpp  PatchHelper.h  PointerUtils.cpp  PointerUtils.h  Sequence.cpp  Sequence.h
Bootstrap/Utils/AssemblyUnhollower/: XrefScannerBindings.cpp  XrefScannerBindings.h
Bootstrap/Utils/Console/: CommandLine.cpp  CommandLine.h  Console.cpp  Console.h  Debug.cpp  Debug.h  JavaLogBridge.cpp  Logger.cpp  Logger.h
Bootstrap/Utils/Helpers/: ImportLibHelper.cpp  ImportLibHelper.h
Bootstrap/Utils/Logging/: Log.cpp  Log.h  Logger.cpp  Logger.h
Bootstrap/Utils/Patching/: PatchHelper.cpp  PatchHelper.h  Patcher.cpp  Patcher.h
Bootstrap/Utils/UnitTesting/: TestHelper.cpp  TestHelper.h
Bootstrap/src/: constants.rs  core.rs  lib.rs
Bootstrap/src/base_assembly/: dotnet.rs  mod.rs  mono.rs
Bootstrap/src/console/: mod.rs
Bootstrap/src/console/os/: mod.rs
Bootstrap/src/errors/: conerr.rs  dotneterr.rs  hookerr.rs  logerr.rs  melonerr.rs  mod.rs
Bootstrap/src/hooks/: functions.rs  mod.rs
Bootstrap/src/hooks/init_hook/: il2cpp.rs  mod.rs  mono.rs
Bootstrap/src/hooks/invoke_hook/: il2cpp.rs  mod.rs  mono.rs
Bootstrap/src/icalls/: bootstrap_interop.rs  melon_utils.rs  mod.rs  mono_library.rs  preload.rs  resolve_internals.rs
Bootstrap/src/logging/: assert.rs  logger.rs
Bootstrap/src/managers/: base_asm.rs  core.rs  dotnet.rs  hooks.rs  internal_calls.rs  mod.rs  mono.rs
Bootstrap/src/melonenv/: args.rs  macros.rs  mod.rs  paths.rs
Bootstrap/src/utils/: assert.rs  console.rs  debug.rs  detours.rs  files.rs  log.rs  mod.rs  pathbuf_impls.rs  runtime.rs  strings.rs
Bootstrap/tools/: .env.sample  cmake_wrapper.sh
MelonProxy/: Cargo.toml  build.rs
MelonProxy/src/: core.rs  lib.rs  orig_exports.rs
MelonProxy/src/proxy/: hinstance_ext.rs
MelonProxy/src/utils/: assert.rs  files.rs  mod.rs
Proxy/: Cargo.toml  Core.cpp  Core.h  Exports.cpp  Exports.h  Proxy.cpp  Proxy.def  Proxy.rc  Proxy.vcxproj  Proxy.vcxproj.filters  version.asm  winhttp.asm  winmm.asm
Proxy/Base/: DllMain.cpp  Proxy.rc  resource.h
Proxy/Exports/: Ex_psapi.cpp  Ex_version.cpp  Ex_winhttp.cpp  Ex_winmm.cpp  export_resources.h  psapi.asm  version.asm  winhttp.asm  winmm.asm
Proxy/Utils/: Directory.h  File.h  Utility.cpp  Utility.h
Proxy/src/: core.rs  entry.rs  lib.rs  libs.rs
Proxy/src/utils/: errors.rs  files.rs  mod.rs
Rust/MelonAndroidProxy/: Cargo.toml
Rust/MelonAndroidProxy/src/: lib.rs  nativeloader.rs
Rust/MelonAndroidProxy/src/impl_android/: mod.rs  nativeloader.rs
Rust/MelonBootstrap/: Cargo.toml  build-android.bat
Rust/MelonBootstrap/src/: constants.rs  lib.rs  lib_android.rs
Rust/MelonBootstrap/src/console/: mod.rs
Rust/MelonBootstrap/src/dotnet/: mod.rs  startup.rs
Rust/MelonBootstrap/src/environment/: macros.rs  mod.rs  paths.rs
Rust/MelonBootstrap/src/errors/: conerr.rs  mod.rs
Rust/MelonBootstrap/src/hooking/: functions.rs  mod.rs
Rust/MelonBootstrap/src/hooks/: mod.rs
Rust/MelonBootstrap/src/icalls/: bootstrap_interop.rs  mod.rs
Rust/MelonBootstrap/src/logging/: assert.rs  logger.rs  mod.rs
Rust/MelonBootstrap/src/utils/: libs.rs  mod.rs  strings.rs  type_aliases.rs
Rust/MelonProxy/: Cargo.toml  build.rs
Rust/MelonProxy-sys/: Cargo.toml
Rust/MelonProxy-sys/src/: lib.rs
Rust/MelonProxy/src/: core.rs  export_indices.rs  exports.rs  intercepted_exports.rs  lib.rs  proxied_exports.rs
Rust/MelonProxy/src/proxy/: exports.rs  hinstance_ext.rs  mod.rs  windows_ext.rs
Rust/MelonProxy/src/utils/: files.rs  mod.rs
Rust/bootstrap_rust/: Cargo.toml  build.rs  freopen_s.cpp
Rust/bootstrap_rust/src/: entry_linux.rs  entry_windows.rs  lib.rs
Rust/bootstrap_rust/src/managers/: base_asm.rs  core.rs  detours.rs  dotnet.rs  game.rs  il2cpp.rs  internal_calls.rs  mod.rs  mono.rs
Rust/proxy_rust/: Cargo.toml
Rust/proxy_rust/.cargo/: config
Rust/proxy_rust/src/: core.rs  entry_linux.rs  entry_windows.rs  exports.rs  lib.rs
SrcLibs/bHaptics/: BuildCommands.txt  CMakeLists.txt  README.md  main.cpp
SrcLibs/bHaptics/src/: HapticLibrary.cpp  ProjectModel.cpp  ProjectModel.h  commonutils.cpp  commonutils.h  easywsclient.cpp  easywsclient.h  hapticsManager.cpp  hapticsManager.h  timer.cpp  timer.h  util.cpp  util.h
(+1881 files in other folders)
