[package]
name = "MelonProxy"
version = "0.6.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msgbox = "0.7.0"
libloading = "0.8.1"

[target.'cfg(target_os = "windows")'.dependencies]
#proxygen-macros = "0.5.0"
proxygen-macros = { git = "https://github.com/RinLovesYou/proxygen" } # temporary until PR is accepted
winapi = { version = "0.3.9", features = [
    "minwindef",
    "libloaderapi",
    "processthreadsapi",
    "consoleapi",
    "processenv",
    "winbase",
    "winuser",
    "sysinfoapi",
    "errhandlingapi",
] }

[target.'cfg(not(target_os = "windows"))'.dependencies]
ctor = "0.2.6"


[lib]
name = "version"
crate-type = ["cdylib"]
