[package]
name = "proxy"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = "0.1.26"
msgbox = "0.7.0"
lazy_static = "1.4.0"
thiserror = "*"
libloading = "*"
clap = { git = "https://github.com/RinLovesYou/clap", features = ["derive"] }

[target.'cfg(windows)'.dependencies]
proxy-dll = { git = "https://github.com/RinLovesYou/dll-proxy-rs.git" }
#proxy-dll = { path = "C:\\Users\\sarah\\Documents\\rust\\dll-proxy-rs\\proxy" }

[target.'cfg(unix)'.dependencies]
libc = "0.2.137"

[lib]
name = "version"
crate-type = ["cdylib"]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"

[build-dependencies]
cc = "1.0.76"
