[package]
name = "melon_bootstrap"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctor = "0.2.4"
netcorehost = "0.15.1"
chrono = "0.4.23"
colored = "2.0.0"
thiserror = "1.0.39"
lazy_static = "1.4.0"
libloading = "0.8.1"
dobby-rs = { git = "https://github.com/RinLovesYou/dobby-rs" }
libc = "0.2.150"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "minwindef", "std", "libloaderapi"] }

[target.'cfg(not(target_os = "android"))'.dependencies]
msgbox = "0.7.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
ndk = { version = "0.7", features = ["api-level-23"] }
ndk-sys = "0.4.1+23.1.7779620"
android_liblog-sys = "0.1"

[target.'cfg(target_os = "android")'.patch.crates-io]
nethost-sys = { git = "https://github.com/TrevTV/nethost-sys" }

[lib]
name = "melon_bootstrap"
crate-type = ["cdylib", "rlib"]