[package]
name = "melon_proxy-sys"
version = "0.2.2"
authors = ["RinLovesYou"]
edition = "2021"
description = "A dynamic Windows System DLL proxy"
repository = "https://github.com/LavaGang/MelonLoader"
license = "GPL-2.0"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dependencies.syn]
version = "2.0.33"

[lib]
name = "melon_proxy_sys"
proc-macro = true