[package]
name = "melon_proxy"
version = "0.2.5"
authors = ["RinLovesYou"]
edition = "2021"
description = "A dynamic Windows System DLL proxy"
repository = "https://github.com/LavaGang/MelonLoader"
license = "GPL-2.0"
readme = "../README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.48"
melon_proxy-sys = { path = "../MelonProxy-sys" }
utf16string = "0.2.0"
libloading = "0.8.0"
msgbox = "0.7.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System", "Win32_System_LibraryLoader"] }

[target.'cfg(target_os = "linux")'.dependencies]
ctor = "0.2.4"

[lib]
name = "version"
crate-type = ["cdylib", "rlib"]