[package]
name = "bootstrap"
version = "0.1.0"
authors = ["RinLovesYou"]
edition = "2021"

description = "Cross-Plat Bootstrap for MelonLoader"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msgbox = "0.7.0"
chrono = "0.4.22"
colored = "2.0.0"
thiserror = "1.0.37"
libloading = "0.7.4"
libc = "*"
libc-stdhandle = "*"
ctor = "0.1.26"
detour = { git = "https://github.com/veeenu/detour-rs" }
lazy_static = "*"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["winuser", "minwindef", "std", "libloaderapi"] }

[lib]
crate-type = ["cdylib"]
